--- a/Cadastro.html
+++ b/Cadastro.html
@@ -29,7 +29,7 @@
     <footer class="rodape1">
         <p>direitos reservados</p>
     </footer>
-    <script src="acesso.js"></script>
+    <script src="Game.js"></script>
 </body>
 
 </html>
