--- a/Cadastro.html
+++ b/Cadastro.html
@@ -21,7 +21,7 @@
     <div class="cadastro">
         <form>
             <label for="name">Digite seu nome para ter acesso ao jogo.</label>
-            <input type="text" id="nome">
+            <input type="text" id="nome" required autofocus>
             <button onclick="Acessar();return false">Enviar</button>
         </form>
     </div>
