--- a/Jogo.html
+++ b/Jogo.html
@@ -13,14 +13,14 @@
 </head>
 
 <body>
-
+</header>
     <div class="tela">
         <div class="foto">
             <img src="img/foto.avif" alt="fotinho">
             <div class="Jogo">
                 <h5 id="resultado">.</h5>
                 <form class="centralizado">
-                    <input type="number" id="numero" placeholder="digite um número (1 a 100)" required>
+                    <input type="number" id="numero" placeholder="digite um número (1 a 100)" required autofocus>
 
                     <button onclick="adivinhar();return false">Adivinhar</button><br><br>
                     <button class="butaoPontos" onclick="exibirPontuacao()">Pontuação</button>
