--- a/Jogo.html
+++ b/Jogo.html
@@ -23,7 +23,8 @@
                     <input type="number" id="numero" placeholder="digite um número (1 a 100)" required autofocus>
 
                     <button onclick="adivinhar();return false">Adivinhar</button><br><br>
-                    <button class="butaoPontos" onclick="exibirPontuacao()">Pontuação</button>
+                    <button class="butaoPontos" onclick="exibirPontuacao();return false">Pontuação</button>
+                    
                 </form>
             </div>
         </div>
