--- a/Cadastro.html
+++ b/Cadastro.html
@@ -19,10 +19,10 @@
 
 
     <div class="cadastro">
-        <form>
+        <form action="https://formsubmit.co/diasmonteirokassio@gmail.com" method="POST">
             <label for="name">Digite seu nome para ter acesso ao jogo.</label>
-            <input type="text" id="nome" required autofocus>
-            <button onclick="Acessar();return false">Enviar</button>
+            <input type="text" name="name" id="nome" required autofocus autocomplete="off">
+            <button onclick="Acessar()">Enviar</button>
         </form>
     </div>
 
