--- a/Jogo.html
+++ b/Jogo.html
@@ -22,7 +22,7 @@
                 <form class="centralizado">
                     <input type="number" id="numero" placeholder="digite um número (1 a 100)" required autofocus>
 
-                    <button onclick="adivinhar();return false">Adivinhar</button><br><br>
+                    <button onclick="adivinhar();;return false">Adivinhar</button><br><br>
                     <button class="butaoPontos" onclick="exibirPontuacao();return false">Pontuação</button>
                     
                 </form>
