--- a/Fim.html
+++ b/Fim.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="cabecalho1">
-        <h1>AO JOGO DA ADIVINHAÇÃO !</h1>
+        <h1>O JOGO DA ADIVINHAÇÃO !</h1>
     </header>
 
 
